opam-version: "2.0"
name: "scratch"
version: "0.1.0"
maintainer: "ifazk@users.noreply.github.com"
authors: ["Ifaz Kabir"]
homepage: "https://github.com/ifazk/"
bug-reports: "https://github.com/ifazk/"
synopsis: "A barebones OCaml starter project"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build & >= "1.0+beta17"}
  "ocaml" { >= "4.03" }
]
