version: "0.1.0"
opam-version: "2.0"
name: "scratch"
maintainer: "ifazk@users.noreply.github.com"
authors: ["Ifaz Kabir"]
homepage: "https://github.com/ifazk/"
bug-reports: "https://github.com/ifazk/"
synopsis: "A barebones OCaml starter project"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.5.1"}
  "ocaml" { >= "4.07.1" }
]
